--- a/final report.tex
+++ b/final report.tex
@@ -90,16 +90,16 @@ As well as it is interesting to analyze the structure of the network graph by it
 
 And actually sometimes it is the common interest that is in foundation of the network itself. The Online social network Flixster can help to meet people with similar tastes in movies, the Russian online social network Odnoklassniki helps people to find their old classmates. 
 
-This property of gathering around similar interests can help to study \textit{\textbf{hidden populations}}. Examples of hidden populations are drug users, sex workers, jazz musicians. Studying the population of drug users or sex workers can help to understand the prevalence of some diseases. The difficulty in studying a hidden population is that it is hidden: the members of such population are by definition hard to reach. It means that there is no easy and quick access to the members of these populations. But once the researcher knows some of them he can take advantage of the fact that probably they are in contact with other representatives of this population. The individuals of hidden populations form the network around their interest. In this way the subset of this population can be found by "crawling" its network graph.
+This property of gathering around similar interests can help to study \textit{\textbf{hidden populations}}, the members of such population are by definition hard to reach. Examples of hidden populations are drug users, sex workers, jazz musicians. Making analysis about hidden populations can be very important. For example, studying the population of drug users or sex workers can help to understand the prevalence of some diseases. The difficulty in studying a hidden population is that it is hidden: there is no easy and quick access to the members of these populations. But once the researcher knows some of them he can take advantage of the fact that probably they are in contact with other representatives of this population. The individuals of hidden populations form the network around their interest. In this way the subset of this population can be found by "crawling" its network graph.
 %What is more important it is hard to estimate what it is probability to sample. 
 
 The sampling methods that use the contacts of known individuals of a population to find other members are called \textit{\textbf{chain-referral methods}}.
-This way of sampling is different from the ideal uniform independent sampling of individuals and because of homophily leads to increased bias and variance of the estimators as we are going to show. 
+This way of sampling is different from the ideal uniform independent sampling of individuals and, because of homophily, leads to increased bias and variance of the estimators as we are going to show. 
 
 The report is organized as follows.
-In chapter 1 we will introduce the current method of sampling hidden populations that is called respondent-driven sampling (RDS). We will discuss what are the problems and challenges related to this method. Next we will propose the enhancement of the current RDS method that we are going study later.
-The chapter 2 will develop the mathematical model for studying RDS. In particular we will introduce a model to generate synthetic network with the desired level of homophily. Further using the built model we will find the exact expressions for the variance and bias for the existing RDS model and the enhanced one in order to compare them later.
-In chapter 3, we will compare the performance of the currently used RDS method to our method. Also we will give some practical recommendations for the users of RDS.
+In chapter 1 we will introduce the current method of sampling hidden populations that is called respondent-driven sampling (RDS). We will regard different estimators that are used to make inferences about the population based on collected samples. We will discuss what are the problems and challenges related to the RDS. Next we will propose the enhancement of the current RDS method that is trying to solve some of these problems.
+In order to study formally introduced enhanced RDS method the chapter 2 will develop the mathematical model. In particular we will introduce a model to generate synthetic network with the desired level of homophily. Further using the built model we will find the exact expressions for the variance and bias for the existing RDS model and the enhanced one in order to compare them later.
+Chapter 3 presents results of the experiments that confirms the correctness of the theoretical part. In order to validate results we used the created synthetic networks as well as the real ones. We will compare the performance of the currently used RDS method to our method. Also we will give some practical recommendations for the users of RDS.
 
 
 
@@ -110,22 +110,22 @@ In chapter 3, we will compare the performance of the currently used RDS method t
 In order to estimate some characteristics of a particular population researchers need to find a representative subset of this population. After analyzing the collected data they can produce general results for the whole population.
 However sometimes they can have difficulties in finding such subset of some populations. Examples can be the population of drug users, of people involved in homosexual relations, of sex workers, of illegal immigrants, of participants in some social movements, of homeless and so on \cite{salganik2004sampling}. The members of these populations are hard to find, they are not willing to participate in the research, that's why these populations are called \textit{hidden populations}.
 
-The reasons to study hidden populations can be various. Studying the prevalence of HIV can help to understand and control the spreading of some diseases. A lot of research is targeted on the studying the HIV prevalence among hidden populations like drug users, female sex workers \cite{musyoki2015prevalence}, gay men \cite{ramirez2005networks}.  Another study \cite{heckathorn2003jazz} studied the population of jazz musicians. Even if the jazz musicians have no reasons to hide them, it is still hard to access them with the standard sampling methods. This study considers the important from the social side question: what is more important for the income level, the number of social connections or the level of professional activity.
+The reasons to study hidden populations can be various. Studying the prevalence of HIV can help to understand and control the spreading of some diseases. A lot of research is targeted on the studying the HIV prevalence among hidden populations like drug users, female sex workers \cite{musyoki2015prevalence}, gay men \cite{ramirez2005networks}.  Another study \cite{heckathorn2003jazz} studied the population of jazz musicians. Even if the jazz musicians have no reasons to hide them, it is still hard to access them with the standard sampling methods. This study considers the question important from the social side: what is more significant for the income level, the number of social connections or the level of professional activity.
 
 In order to collect samples from the hidden population some special technique were developed. The main challenge here is that each individual has the same probability to be sampled, or if some bias exists it can be easily removed. For example, using telephone survey in order to collect information would automatically exclude some subsets of people (like homeless, poor) that don't have telephone number. This fact can affect the correctness of the estimate because it is impossible to predict the bias that we introduce by considering only individual with telephone number. 
 
-Time-space sampling tries to solve this problem by sampling from different venue-time segments. Each venue-time segment(e.g., Place Massena, Friday, 21.00-24.00) is selected with probability based on the expected number of participants at this segment. However it is impossible to sample exhaustive list of all venue-time segments that results again in the  unknown bias of obtained estimation.
+Time-space sampling tries to solve this problem by sampling from different venue-time segments. Each venue-time segment(e.g., Place Massena, Friday, 21.00-24.00) is selected with probability based on the expected number of participants at this segment. And then on the chosen venue-time segment the researchers invite the participants. However it is impossible to list all venue-time segments what results again in an unknown bias of the obtained estimation.
 
-Another approach to sample hidden population is using chain-referral techniques. The researchers benefit from the fact that people tend to know each other when they have common interests. A jazz musician has a lot of reasons to know another jazz musicians: they may perform in the same clubs, they probably attend the same events, they may collaborate with each other and so on. The researcher can then find just a few representatives of the hidden population and then ask them to provide the contacts of other members of this population.
+Another approach to sample hidden populations is using chain-referral techniques. The researchers benefit from the fact that people tend to know each other when they have common interests. A jazz musician has a lot of reasons to know another jazz musicians: they may perform in the same clubs, they probably attend the same events, they may collaborate with each other and so on. The researcher can then find just a few representatives of the hidden population and then ask them to provide the contacts of other members of this population.
 
-One particular chain-referral technique that is currently widely used for studying prevalence of HIV/AIDS among injection drug users, sex workers, men who have sex with men is called (RDS) \textit{\textbf{respondent-driven sampling}}.
+One particular chain-referral technique that is currently widely used for studying prevalence of HIV/AIDS among injection drug users, sex workers, gays is called (RDS) \textit{\textbf{respondent-driven sampling}}.
 
 
 \section{Respondent-driven sampling}
-RDS begins by selecting a group of initial participants that are called \textit{seeds}. The procedure follows according to chain-referral model: each participant in study recruits another participants. The step is called wave. Both participating in the research and recruiting new participants are encouraged by financial incentive. The sampling continues in this way until needed size of participants is reached. During RDS participants are asked to report how many contacts they have.
+RDS begins by selecting a group of initial participants that are called \textit{seeds}. The procedure follows according to chain-referral model: each participant in the study recruits other participants. The step is called wave. Both participating in the research and recruiting new participants are encouraged by financial incentive. The sampling continues in this way until the needed size of participants is reached. During the interview participants are asked to report how many contacts in the hidden population they have.
 This process enables to collect data for making statistical analysis.
 
-In order to study formally RDS we will model the network of people as the graphs, where the nodes are presented by the individuals and the contact between two individuals is represented by the edge between the correspondent nodes. Then RDS can be regarded as random walk on the graph when the following assumptions are true:
+In order to study formally RDS we will model the network of people as a graph, where the individuals are represented by the nodes and the contact between two individuals is represented by the edge between the corresponding nodes. Then the RDS recruitment process can be regarded as random walk on the graph when the following assumptions are true:
 \begin{enumerate}
   \item Seeds are chosen proportionally to their degree in the network.  
   \item If individual $A$ knows individual $B$ than individual $B$ knows $A$ as well (the network can be represented as undirected graph).
